force-app/main/default/objects/ContentVersion/fields/Resolve_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Resolve_Attachment_Id__c</fullName>
    <description>Resolve Attachment Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolve Attachment Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>