force-app/main/default/objects/ContentVersion/fields/Resolve_Createddate__c.field-meta.xml
<CustomField>
    <fullName>Resolve_Createddate__c</fullName>
    <description>Added for Datamigration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolve Createddate</label>
    <type>DateTime</type>
</CustomField>