force-app/main/default/objects/ContentVersion/fields/Resolve_Lastmodifiedby__c.field-meta.xml
<CustomField>
    <fullName>Resolve_Lastmodifiedby__c</fullName>
    <description>Added for datamigration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolve Lastmodifiedby</label>
    <length>100</length>
    <type>Text</type>
</CustomField>