force-app/main/default/objects/ContentVersion/fields/SF_JobID__c.field-meta.xml
<CustomField>
    <fullName>SF_JobID__c</fullName>
    <description>SF JobID for data migration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SF JobID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>